--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Coronavirus Search in Vue",
+  "name": "coronavirussearchinvue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
