--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-resource": "^1.5.1",
-    "vue-simple-spinner": "^1.2.10"
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
