--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "core-js": "^3.6.4",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-click-outside": "^1.1.0",
     "vue-resource": "^1.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
